# irodori-extension-redis

./: Cargo.toml  Makefile  README.ja.md  README.md  connector.config.json  connector.source.json  irodori.extension.json
native/source/: README.ja.md  README.md
src/: driver.rs  lib.rs
