[package]
name = "irodori-extension-redis"
version = "0.1.1"
edition = "2021"
license = "MIT OR 0BSD"
description = "Native Irodori Table connector extension for Redis."
repository = "https://github.com/hjosugi/irodori-extension-redis"
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE-*",
  "connector.config.json",
  "connector.source.json",
  "irodori.extension.json",
  "src/**",
  "native/source/**",
]

[lib]
name = "irodori_extension_redis"
crate-type = ["cdylib", "rlib"]

[dependencies]
irodori-connector-abi = { git = "https://github.com/hjosugi/irodori-kit", tag = "v0.6.0" }
redis = { version = "0.32", features = ["tls-rustls-webpki-roots"] }
serde_json = "1"

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
